--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ascii-table3",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "author": "João Simões <joao.santos.simoes@gmail.com> (https://github.com/AllMightySauron)",
   "description": "Javascript ASCII renderer for beautiful console-based tables",
   "repository": {
@@ -25,7 +25,7 @@
     "hint": "jshint ./",
     "test": "mocha -R spec"
   },
-  "devdependencies": {
+  "devDependencies": {
     "jshint": "^2.12.0",
     "mocha": "^8.2.1"
   },
