--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ascii-table3",
-  "version": "0.4.0",
+  "version": "0.4.1",
   "author": "João Simões <joao.santos.simoes@gmail.com> (https://github.com/AllMightySauron)",
   "description": "Javascript ASCII renderer for beautiful console-based tables",
   "repository": {
@@ -23,11 +23,13 @@
   "scripts": {
     "qa": "npm run hint && npm run test",
     "hint": "jshint ./",
-    "test": "mocha -R spec"
+    "test": "mocha -R spec",
+    "coverage": "nyc mocha"
   },
   "devDependencies": {
     "jshint": "^2.12.0",
-    "mocha": "^8.2.1"
+    "mocha": "^8.2.1",
+    "nyc": "^15.1.0"
   },
   "dependencies": {}
 }
