--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ascii-table3",
-  "version": "0.4.1",
+  "version": "0.4.5",
   "author": "João Simões <joao.santos.simoes@gmail.com> (https://github.com/AllMightySauron)",
   "description": "Javascript ASCII renderer for beautiful console-based tables",
   "repository": {
@@ -21,7 +21,7 @@
   ],
   "main": "index.js",
   "scripts": {
-    "qa": "npm run hint && npm run test",
+    "qa": "npm run hint && npm run coverage",
     "hint": "jshint ./",
     "test": "mocha -R spec",
     "coverage": "nyc mocha"
