--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ascii-table3",
-  "version": "0.6.2",
+  "version": "0.6.3",
   "author": "João Simões <joao.santos.simoes@gmail.com> (https://github.com/AllMightySauron)",
   "description": "Javascript ASCII renderer for beautiful console-based tables",
   "repository": {
@@ -20,6 +20,9 @@
     }
   ],
   "main": "index.js",
+  "engines": { 
+      "node": ">=11.14.0" 
+  },
   "scripts": {
     "qa": "npm run hint && npm run coverage",
     "hint": "jshint ./",
