--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ascii-table3",
-  "version": "0.6.3",
+  "version": "0.7.0",
   "author": "João Simões <joao.santos.simoes@gmail.com> (https://github.com/AllMightySauron)",
   "description": "Javascript ASCII renderer for beautiful console-based tables",
   "repository": {
@@ -20,8 +20,8 @@
     }
   ],
   "main": "index.js",
-  "engines": { 
-      "node": ">=11.14.0" 
+  "engines": {
+    "node": ">=11.14.0"
   },
   "scripts": {
     "qa": "npm run hint && npm run coverage",
@@ -34,5 +34,7 @@
     "mocha": "^8.2.1",
     "nyc": "^15.1.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "printable-characters": "^1.0.42"
+  }
 }
